--- a/src/data/homepage/projects-teasing.yaml
+++ b/src/data/homepage/projects-teasing.yaml
@@ -1,7 +1,7 @@
 title: Dernières collaborations
 teasings:
   - <span class="text-primary">Nous avons aidé l’équipe de Sys1</span> à repenser sa solution de gestion des dossiers informatisés des personnes suivies dans les établissements médico-sociaux
-  - <span class="text-primary">Nous avons accompagné la Ville de Mérignac</span> et l’agence Transfo Systémique dans la co-création d’un stand participatif sur le dérèglement climatique
+  - <span class="text-primary">Nous avons accompagné la Ville de Mérignac</span> et Transfo Systémique dans la co-création d’un stand participatif sur le dérèglement climatique
   - <span class="text-primary">Nous avons collaboré avec Canal+International</span> et l’agence Ekino pour refondre un outil interne de messagerie par satellite
   - <span class="text-primary">Nous avons conseillé les équipes du Groupe des Chalets</span> et de l’agence Rose Primaire dans la conception d’un site institutionnel et d’espaces connectés
   - <span class="text-primary">Nous avons aidé School of System Change</span> à mettre au point sa stratégie UX pour recruter en ligne ses futures promotions
