--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-import": "15.1.0",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
+    "sharp": "0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
