--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 ErrorDocument 404 /404.html
 
-Redirect 301 /manifeste /notre-manifeste
-Redirect 301 /manifesto /notre-manifeste
-Redirect 301 /expertises /glossaire-ux-design
-Redirect 301 /projects/transformation-client-transformation-digitale-trexpress /projets
-Redirect 301 /project/transformation-client-transformation-digitale-trexpress /projets
-Redirect 301 /project/experience-client-journey-indoor-cycling-bordeaux /projets
+Redirect 301 /manifeste /notre-manifeste/
+Redirect 301 /manifesto /notre-manifeste/
+Redirect 301 /expertises /glossaire-ux-design/
+Redirect 301 /projects/transformation-client-transformation-digitale-trexpress /projets/
+Redirect 301 /project/transformation-client-transformation-digitale-trexpress /projets/
+Redirect 301 /project/experience-client-journey-indoor-cycling-bordeaux /projets/
