--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,17 @@
       {
         "name": "@astrojs/ts-plugin"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "data/*": ["src/data/*"],
+      "icons/*": ["src/icons/*"],
+      "images/*": ["src/images/*"],
+      "layouts/*": ["src/layouts/*"],
+      "pages/*": ["src/pages/*"],
+      "scripts/*": ["src/scripts/*"],
+      "styles/*": ["src/styles/*"]
+    }
   }
 }
