--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 RewriteEngine on
 # force https
 RewriteCond %{HTTPS} off
-RewriteRule (.*) https://team-ux.com/$1 [R=301,L] [OR]
+RewriteRule (.*) https://team-ux.com/$1 [R=301,L]# [OR]
 # www to non-www
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^ %{REQUEST_SCHEME}://%1%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+# RewriteRule ^ %{REQUEST_SCHEME}://%1%{REQUEST_URI} [R=301,L]
 
 ErrorDocument 404 /404.html
 
