--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,4 @@ Redirect 301 /expertises /glossaire-ux-design/
 Redirect 301 /projects/transformation-client-transformation-digitale-trexpress /projets/
 Redirect 301 /project/transformation-client-transformation-digitale-trexpress /projets/
 Redirect 301 /project/experience-client-journey-indoor-cycling-bordeaux /projets/
+Redirect 301 /project/design-ux-presse-en-ligne-startup-poool /projets/
