--- a/.htaccess
+++ b/.htaccess
@@ -12,5 +12,10 @@ Redirect 301 /manifesto /notre-manifeste/
 Redirect 301 /expertises /glossaire-ux-design/
 Redirect 301 /projects/transformation-client-transformation-digitale-trexpress /projets/
 Redirect 301 /project/transformation-client-transformation-digitale-trexpress /projets/
+Redirect 301 /project/transformation-client-transformation-digitale-societe-transport /projets/
 Redirect 301 /project/experience-client-journey-indoor-cycling-bordeaux /projets/
 Redirect 301 /project/design-ux-presse-en-ligne-startup-poool /projets/
+Redirect 301 /project/groupe-des-chalets /projets/
+Redirect 301 /project/dxomark /projets/
+Redirect 301 /project/logus-sys1 /projets/
+Redirect 301 /project/meyerdom /projets/
