--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,6 @@
-# RewriteEngine on
-# force https
-# RewriteCond %{HTTPS} off
-# RewriteRule (.*) https://team-ux.com/$1 [R=301,L] [OR]
-# RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-# RewriteRule ^ %{REQUEST_SCHEME}://%1%{REQUEST_URI} [R=301,L]
+RewriteEngine on
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://team-ux.com/$1 [R=301,L]
 
 ErrorDocument 404 /404.html
 
