--- a/src/data/notre-manifeste/convictions.yaml
+++ b/src/data/notre-manifeste/convictions.yaml
@@ -6,11 +6,11 @@ convictions:
     content: Nous questionnons l’impact de chaque solution conçue, mais également celui de chaque organisation avec qui il nous est proposé de travailler.
   - title: Autonomie des personnes
     content: Nous pensons que le design doit faciliter l’autonomie et la résilience des personnes et non leur addiction à un produit ou service.
-  - title: Rejet des "dark patterns"
-    content: Nous rejetons l’utilisation de techniques de manipulation des personnes utilisatrices, à des fins non éthiques.
+  - title: Rejet des “dark patterns”
+    content: Nous rejetons l’utilisation de techniques de manipulation des personnes utilisatrices à des fins non éthiques.
   - title: Inclusivité des personnes
     content: Parce que chaque mot compte, nous nous efforçons d’imaginer des fonctionnalités et des wordings inclusifs.
   - title: Respect de la vie privée
-    content: Nous privilégions le respect de la vie privée des personnes, au traitement irraisonné de données au service du business.
+    content: Nous privilégions le respect de la vie privée plutôt que le traitement irraisonné des données.
   - title: Minimalisme fonctionnel et technique
     content: Dans une approche d’éco-conception, nous challengeons chaque fonctionnalité pour en proposer une alternative techniquement moins gourmande.
