--- a/src/data/notre-manifeste/actions.yaml
+++ b/src/data/notre-manifeste/actions.yaml
@@ -1,8 +1,8 @@
 title: Nos actions au quotidien
-introduction: Si nos actions ne sont pas parfaites, nous tendons vers cet engagement à respecter chacune de nos convictions. Nous cherchons à nous améliorer au quotidien et à apprendre, projet après projet.
+introduction: Nous tendons vers cet engagement à respecter chacune de nos convictions en agissant au quotidien. Même si nos actes ne sont pas parfaits, nous cherchons à nous améliorer au quotidien et à apprendre, projet après projet.
 actions:
   - title: Nous n’avons pas peur de faire des choix.
-    content: Nous refusons de travailler sur certains projets, pour certains produits et services ou pour certaines entreprises, si nous considérons qu’ils ont un impact négatif sur leur écosystème.
+    content: Nous refusons de travailler sur certains projets, pour certains produits et services ou pour certaines entreprises, si nous considérons qu’ils ont un impact trop négatif sur leur écosystème.
   - title: Nous nous formons et nous remettons en question.
     content: "Nous avons besoin d’apprendre et de nous nourrir sur toutes les composantes du design dit “éthique” : lectures, conférences, certifications, échanges, formations..."
   - title: Nous soutenons les initiatives à impact positif portées par d’autres.
@@ -12,6 +12,6 @@ actions:
   - title: Nous (nous) posons beaucoup de questions.
     content: Nous portons une attention particulière à chacune de nos actions et nous ne restons pas figées sur notre première idée, afin de mettre au point ce qui apportera vraiment le plus aux personnes.
   - title: Nous sommes pro-actives et communicantes auprès de notre clientèle.
-    content: Nos livrables initiaux respectent nos convictions éthiques et si nos choix de conception questionnent nos clientes ou nos clients, nous les expliquons et les défendons au maximum.
+    content: Nos livrables initiaux respectent nos convictions éthiques. Quand nos choix de conception questionnent nos clientes ou nos clients, nous les expliquons et les défendons au maximum.
   - title: Nous partageons nos convictions.
     content: Nous nous enrichissons des échanges que nous avons dans différentes communautés design et nous communiquons nos idées et nos valeurs lors des cours et des séances de mentorat que nous donnons.
