--- a/src/data/temoignages/all-testimonials.yaml
+++ b/src/data/temoignages/all-testimonials.yaml
@@ -10,9 +10,6 @@
 - content: "Je suis très satisfait de notre collaboration avec Team UX. Yuna et Daniela forment un duo complémentaire et nous ont permis de renforcer la vision commune de notre projet avec mon associé. Pour chacun de nos questionnements, elles sont restées à l'écoute et ont trouvé des solutions."
   author: Kevin Dupouy, dirigeant de
   company: Dynamo Bordeaux
-- content: "Team UX a su prendre en charge l'ergonomie et le graphisme de LOGUS avec la plus grande efficacité et professionnalisme. Nous avons énormément apprécié la collaboration et notamment la réactivité, la disponibilité dont Team UX a fait preuve et surtout les idées qu'elles ont présentées. L'équipe a pris en compte nos contraintes temporelles, techniques et organisationnelles afin de répondre au mieux à notre besoin. Notre logiciel se modernise, les interfaces sont plus belles, l'ergonomie est plus travaillée et ce tout en gardant son identité et son ADN propre. Des échanges très riches. C'est un réel plaisir de pouvoir collaborer et travailler ensemble dans un cadre agréable et organisé."
-  author: Julien Narboni, chef de projets technico-fonctionnel
-  company: Sys1
 - content: "Nous avons fait appel à Team UX pour plusieurs sites web et l'espace authentifié de l'un de nos clients (habitat social). Yuna et Daniela se sont très vite acculturées au sujet et ont produit des prototypes intégrant les bonnes pratiques de qualité (Opquast) et les règles d'accessibilité (RGAA) relatives au design. Elles ont fait preuve d'une grande rigueur et d'une capacité d'écoute."
   author: Jade Vincent, co-fondatrice de
   company: Rose Primaire
@@ -32,7 +29,10 @@
   contentLang: en
   author: Saskia Rysenbry, curator at
   company: School of System Change
-- content: À travers de nombreux ateliers de design thinking, Yuna et Daniela nous ont permis de retranscrire des choses complexes et diffuses en idées simples, comprises de tous et activables. Le résultat a toujours été au rendez-vous.
+- content: "Team UX a su prendre en charge l'ergonomie et le graphisme de LOGUS avec la plus grande efficacité et professionnalisme. Nous avons énormément apprécié la collaboration et notamment la réactivité, la disponibilité dont Team UX a fait preuve et surtout les idées qu'elles ont présentées. L'équipe a pris en compte nos contraintes temporelles, techniques et organisationnelles afin de répondre au mieux à notre besoin. Notre logiciel se modernise, les interfaces sont plus belles, l'ergonomie est plus travaillée et ce tout en gardant son identité et son ADN propre. Des échanges très riches. C'est un réel plaisir de pouvoir collaborer et travailler ensemble dans un cadre agréable et organisé."
+  author: Julien Narboni, chef de projets technico-fonctionnel
+  company: Sys1
+- content: "À travers de nombreux ateliers de design thinking, Yuna et Daniela nous ont permis de retranscrire des choses complexes et diffuses en idées simples, comprises de tous et activables. Le résultat a toujours été au rendez-vous."
   author: Maxime Moné, co-fondateur de
   company: Poool
 - content: "Comment arriver à travailler tous ensemble autour d’un si gros projet ? Daniela et Yuna, par leur expérience, leur bienveillance, leur écoute et leur méthodologie, ont complètement réussi leur challenge. Nous avons été impressionnés par la complicité qui est née entre nos collaborateurs et par les idées qui sont ressorties."
