--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "name": "@astrojs/ts-plugin"
       }
     ],
+    "types": ["cypress", "@percy/cypress"],
     "baseUrl": ".",
     "paths": {
       "components/*": ["src/components/*"],
