--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -2,11 +2,11 @@ name: Run visual testing
 
 on:
   pull_request:
-    types: [ labeled, opened, reopened, synchronize ]
+    types: [ labeled ]
 
 jobs:
   build:
-    if: contains(github.event.pull_request.labels.*.name, "visual-testing")
+    if: ${{ github.event.label.name == 'visual-testing' }}
     runs-on: ubuntu-latest
 
     steps:
