--- a/src/data/homepage/expertises.yaml
+++ b/src/data/homepage/expertises.yaml
@@ -20,12 +20,14 @@ expertises:
       - Conception ou optimisation de parcours multicibles
       - Design systems
       - Audits rapides ou approfondis d’UX & d’ergonomie
+      - Design review des productions UX/UI internes
       - Consulting et mentorat UX/UI
   - name: Éco-conception & design accessible
     description: Nous sommes formées en accessibilité et en éco-conception numériques. Nous vous accompagnons dans cette direction !
     skills:
       - Éco-conception de sites Web, d’applications mobile et d’outils métiers
-      - Audit et référentiels d’éco-conception et d’accessibilité
+      - Design UX et UI intégrant les règles d’accessibilité relatives au design
+      - Utilisation des référentiels et normes françaises et internationales RGESN, WSG, RGAA, WCAG, ATAG
       - Sensibilisation aux questionnements éthiques liés au design numérique (“numérique responsable”)
       - UX writing inclusif
-      - Design UX et UI intégrant les règles d’accessibilité relatives au design
+      - Revues de design orientées accessibilité et/ou éco-conception
