--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.4.0",
+    "astro": "4.1.1",
     "astro-icon": "0.8.1"
   },
   "devDependencies": {
