--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "4.1.1",
-    "astro-icon": "0.8.1"
+    "astro": "^4.1.1",
+    "astro-icon": "1.0.2"
   },
   "devDependencies": {
     "@astrojs/check": "0.3.4",
