--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -2,7 +2,8 @@ name: Run visual testing
 
 on:
   pull_request:
-    types: [ labeled ]
+    # run visual diffing test if label is added, and for all subsequent pushed commits
+    types: [ labeled, opened, synchronize, reopened ]
 
 jobs:
   build:
